Adress boundary error given bad input #48099

Closed
opened 2016-04-10 10:41:42 +02:00 by Max Voss · 12 comments

The camera object has a "getScreenPosition" function (API link) that "Gets the position of an object projected on screen space."

If you give it "None" instead of an argument it crashes instead of exiting gracefully.

Here is blendfile that reproduces the bug.

http://theorysend.com/view/b1658b6488984ff36a45e71d575e1eff324e9898

The camera object has a "getScreenPosition" function [(API link) ](https://www.blender.org/api/blender_python_api_2_77_release/bge.types.KX_Camera.html?highlight=getscreenposition#bge.types.KX_Camera.getScreenPosition) that "Gets the position of an object projected on screen space." If you give it "None" instead of an argument it crashes instead of exiting gracefully. Here is blendfile that reproduces the bug. http://theorysend.com/view/b1658b6488984ff36a45e71d575e1eff324e9898
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @MaxVoss

Added subscriber: @MaxVoss

Added subscriber: @alabd14313

Added subscriber: @alabd14313

Blender 2.77a
Arch linux
Intel i915
/tmp/crash.txt :

# Blender 2.77 (sub 0), Commit date: 2016-04-05 18:12, Hash abf6f08
bpy.context.space_data.show_syntax_highlight = True  # Property
bpy.context.object.text = bpy.data.texts["Text"]  # Property

# backtrace
blender(BLI_system_backtrace+0x30) [0x1366040]
blender() [0x9e1f39]
/usr/lib/libc.so.6(+0x33330) [0x7f78ba698330]
blender(_ZNK13KX_GameObject20NodeGetWorldPositionEv+0) [0x1589790]
blender(_ZN9KX_Camera19PygetScreenPositionEP7_object+0x85) [0x157ce75]
/usr/lib/libpython3.5m.so.1.0(PyEval_EvalFrameEx+0x7e11) [0x7f78c578d591]
/usr/lib/libpython3.5m.so.1.0(+0x1289e2) [0x7f78c578e9e2]
/usr/lib/libpython3.5m.so.1.0(PyEval_EvalCodeEx+0x23) [0x7f78c578eac3]
/usr/lib/libpython3.5m.so.1.0(PyEval_EvalCode+0x1b) [0x7f78c578eaeb]
blender(_ZN20SCA_PythonController7TriggerEP16SCA_LogicManager+0x104) [0x15fe444]
blender(_ZN16SCA_LogicManager10BeginFrameEdd+0xa3) [0x15f9573]
blender(_ZN15KX_KetsjiEngine9NextFrameEv+0x272) [0x1593692]
blender() [0x1513567]
blender(StartKetsjiShell+0xbc0) [0x15142f0]
blender() [0xad65f0]
blender() [0x9eb64f]
blender() [0x9ec90d]
blender() [0x9eccd9]
blender() [0x9ed198]
blender(wm_event_do_handlers+0x3d6) [0x9ed6a6]
blender(WM_main+0x18) [0x9e4988]
blender(main+0xf20) [0x9c1c80]
/usr/lib/libc.so.6(__libc_start_main+0xf0) [0x7f78ba685710]
blender(_start+0x29) [0x9e1999]

Blender 2.77a Arch linux Intel i915 /tmp/crash.txt : ``` # Blender 2.77 (sub 0), Commit date: 2016-04-05 18:12, Hash abf6f08 bpy.context.space_data.show_syntax_highlight = True # Property bpy.context.object.text = bpy.data.texts["Text"] # Property # backtrace blender(BLI_system_backtrace+0x30) [0x1366040] blender() [0x9e1f39] /usr/lib/libc.so.6(+0x33330) [0x7f78ba698330] blender(_ZNK13KX_GameObject20NodeGetWorldPositionEv+0) [0x1589790] blender(_ZN9KX_Camera19PygetScreenPositionEP7_object+0x85) [0x157ce75] /usr/lib/libpython3.5m.so.1.0(PyEval_EvalFrameEx+0x7e11) [0x7f78c578d591] /usr/lib/libpython3.5m.so.1.0(+0x1289e2) [0x7f78c578e9e2] /usr/lib/libpython3.5m.so.1.0(PyEval_EvalCodeEx+0x23) [0x7f78c578eac3] /usr/lib/libpython3.5m.so.1.0(PyEval_EvalCode+0x1b) [0x7f78c578eaeb] blender(_ZN20SCA_PythonController7TriggerEP16SCA_LogicManager+0x104) [0x15fe444] blender(_ZN16SCA_LogicManager10BeginFrameEdd+0xa3) [0x15f9573] blender(_ZN15KX_KetsjiEngine9NextFrameEv+0x272) [0x1593692] blender() [0x1513567] blender(StartKetsjiShell+0xbc0) [0x15142f0] blender() [0xad65f0] blender() [0x9eb64f] blender() [0x9ec90d] blender() [0x9eccd9] blender() [0x9ed198] blender(wm_event_do_handlers+0x3d6) [0x9ed6a6] blender(WM_main+0x18) [0x9e4988] blender(main+0xf20) [0x9c1c80] /usr/lib/libc.so.6(__libc_start_main+0xf0) [0x7f78ba685710] blender(_start+0x29) [0x9e1999] ```

Blender 2.76.9 works fine.

Blender 2.76.9 works fine.

Added subscriber: @Sergey

Added subscriber: @Sergey

Added subscriber: @panzergame

Added subscriber: @panzergame
Member

Added subscriber: @brita

Added subscriber: @brita
Inês Almeida self-assigned this 2016-10-31 14:58:53 +01:00
Member

Confirmed in 2.78a

Confirmed in 2.78a
Member

Added subscriber: @Blendify

Added subscriber: @Blendify
Member

Changed status from 'Open' to: 'Archived'

Changed status from 'Open' to: 'Archived'
Member

This task is being closed because the BGE has been removed in Blender 2.8.

This task is being closed because the BGE has been removed in Blender 2.8.
Sign in to join this conversation.
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender-addons#48099
No description provided.