UPBGE: Fix T48099: None accepted in getScreenPosition.

The bug was introduced in the original dfelinto commit which implemented these functions.